# doctrpp

./: README.md  predict_pkg.py  pyproject.toml  simple_test.py
doctrpp/: GeoTr.py  __init__.py  cli.py  extractor.py  utils.py
